# wordhuntsolver

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
wordhuntsolver/: __main__.py  ocr_image.py  pather.py  solver.py
wordhuntsolver/gui/: controller.py  view.py
